0028350: Draw Harness - DRAWEXE hangs up immediatly when redirecting input stream on Windows

Fallback using fgetws() instead of ReadConsoleW() for reading input from a pipe.